# aimfast

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  codecov.yml  image_fidelity.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: publish_package.yml  test_installation.yml
.travis/: mypy.docker  pep8.docker  py2.docker  py3.docker  python2.docker
aimfast/: aimfast.py  auxiliary.py  main.py  source_finder.yml
aimfast/tests/: test_aimfast.py
aimfast/tests/files/: DR_catalog.txt  catalog.lsm.html  catalog.txt  cube1.fits  fidelity_results.json  mask.fits
doc/: aimfast.rst  conf.py  index.rst  intro.rst  modules.rst  readthedocs.yml  requirements.readthedocs.txt
docs/: _config.yml  aimfast.rst  footer.rst  index.md  intro.rst
image_fidelity/: image_fidelity.py
