[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aimfast"
version = "1.3.4"
description = "An Astronomical Image Fidelity Assessment Tool."
authors = [{name = "Athanaseus Ramaila", email = "ramaila.jat@gmail.com"}]
readme = "README.rst"
homepage = "https://github.com/Athanaseus/aimfast"
repository = "https://github.com/Athanaseus/aimfast.git"
license = "GNU GPL 3"
classifiers = ["Development Status :: 5 - Production/Stable",
               "Intended Audience :: Science/Research",
               "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
               "Programming Language :: Python :: 3.8",
               "Topic :: Scientific/Engineering :: Astronomy",
               "Topic :: Software Development :: Libraries"]
keywords = ["fits", "dataset", "lsm", "models", "statistics", "html", "catalogs"]
packages = [
    { include = "aimfast" },
]

[tool.poetry.dependencies]
python = ">=3.8"
astLib = "0.10.0"
astropy = "*"
astroquery = "*"
astro-tigger = "*"
bokeh = "*"
jsonschema = "*"
mock = "*"
numpy = "*"
numpydoc = "*"
pyyaml = "*"
regions = "*"
scikit-learn = "*"
scipy = "*"
AegeanTools = { version = "*", optional=true }

[tool.poetry.dev-dependencies]
attrs = "*"
pytest = "*"
numpy = "*"

[tool.poetry.extras]
doc = ["sphinx-pypi-upload", "numpydoc", "Sphinx", "furo"]
aegean = ["AegeanTools"]
pybdsf = ["bdsf", "matplotlib"]
source_finders = ["bdsf", "matplotlib", "AegeanTools"]
svg_images = ["matplotlib", "selenium"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
]
