[tool.poetry]
name = "aimfast"
version = "1.3.4"
description = "An Astronomical Image Fidelity Assessment Tool."
authors = ["Athanaseus Ramaila <ramaila.jat@gmail.com>"]
readme = "README.rst"
homepage = "https://github.com/Athanaseus/aimfast"
repository = "https://github.com/Athanaseus/aimfast.git"
license = "GNU GPL 3"
classifiers = ["Development Status :: 5 - Production/Stable",
               "Intended Audience :: Science/Research",
               "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
               "Programming Language :: Python :: 3.8",
               "Topic :: Scientific/Engineering :: Astronomy",
               "Topic :: Software Development :: Libraries"]
keywords = ["fits", "dataset", "lsm", "models", "statistics", "html", "catalogs"]
packages = [
    { include = "aimfast" },
]


[tool.poetry.scripts]
aimfast = "aimfast.main:driver"

[tool.poetry.dependencies]
python = ">=3.8"
astLib = "0.10.0"
astropy = "*"
astroquery = "*"
astro-tigger = "*"
bokeh = "*"
jsonschema = "*"
mock = "*"
numpy = "*"
numpydoc = "*"
pyyaml = "*"
regions = "*"
scikit-learn = "*"
scipy = "*"
AegeanTools = { version = "*", optional=true }
matplotlib = { version = "*", optional=true }
bdsf = { version = "*", optional=true}
selenium = { version = "*", optional=true}
pytest = { version = "^7.2.2", optional=true }
pytest-flake8 = { version = "^1.1.1", optional=true }

[tool.poetry.group.tests]
optional = true
[tool.poetry.group.tests.dependencies]
attrs = "*"
pytest = "*"
numpy = "*"
flake8 = "*"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
Sphinx = "^5.3.0"
sphinx-pypi-upload = "*"
sphinx-copybutton = "^0.5.0"
furo = "^2022.9.15"
numpydoc = "*"

[tool.poetry.extras]
doc = ["sphinx-pypi-upload", "numpydoc", "Sphinx", "furo"]
aegean = ["AegeanTools"]
pybdsf = ["bdsf", "matplotlib"]
source_finders = ["bdsf", "matplotlib", "AegeanTools"]
svg_images = ["matplotlib", "selenium"]
testing = ["pytest", "pytest-flake8"]

[build-system]
requires = ["setuptools", "poetry-core"]
build-backend = "poetry.core.masonry.api"
